Updating effect and content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav id="nav" state="start">
       <a href="projects.html?reload=RELOAD_ON_SAVE" title="Show projects">Projects</a>
-      <a href="education.html?reload=RELOAD_ON_SAVE" title="Show education">Education</a>
+      <a href="about.html?reload=RELOAD_ON_SAVE" title="Show about">About</a>
     </nav>
   </header>
 
