Updating effect and content

--- a/about.html
+++ b/about.html
@@ -52,10 +52,11 @@
           WORK IN PROGRESS
         </p>
         <p>
-          I’m a French student studying math and informatics at Grenoble. I have always liked math, physics and informatics and I am passionate about computer graphics especially.
+          I’m a French student studying math and informatics at Grenoble. I have always liked math, physics and informatics and I am especially passionate about computer graphics.
         </p>
         <p>
-        When I discovered programmation, I was amazed by the things it allowed me to do. I remember playing hours with my calculator in highschool, graphing weird functions and making programs for fun. So, when I stumbled upon shaders, (shadertoy), I really enjoyed it because, in many ways, it is still playing with function but with cooler results and more possibilities.
+        When I discovered programmation, I was amazed by the things it allowed me to do. It allow to build so many things by writing text. A few years later, I discovered shaders.
+          I remember playing hours with my calculator in highschool, graphing weird functions and making programs for fun. So, when I stumbled upon shaders (on shadertoy), I really enjoyed it because, in many ways, it the continuity of when I was playing with function but with cooler results and more possibilities.
         </p>
 
         <p>
