Updating effect and content

--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
               <h6>May. 2023 - Sept.2023 | C++ / HLSL / Unreal Engine 5</h6>
             </div>
             <p>Corys is a manufacturer of training and engineering simulators for the rail transport, energy and hydrocarbon industries. Their R&D team is actively transitioning from their old 3D engine to UE5 to enhance visual quality in their simulators. </p>
-            <p>During my 4 months internship I made new windscreen effect for rain, snow and dirtiness based on the ones in the previous motor.</p>
+            <p>During my 4 months internship I made new windscreen effect for rain, snow and dirtiness based on the ones in the previous engine. It was really challenging to create such effects with many constraints.</p>
           </div>
           <section class="slider-wrapper">
             <button class="slide-arrow slide-arrow-prev">
@@ -183,7 +183,7 @@
             </div>
             <p>I wasn't familiar with front end programing (nor particularly interested) but I wanted to have a website in order to easily share my projects. So I decided to make this website. The goal here is not to have something perfect but something that works.</p>
             <p>I made it in roughly 3 weeks since I had to learn html/css and javascript as well as the specificity of WebGL compared to OpenGl 3.
-              The background animation is entirely made with WebGl (and javascript of course). It consists of a vertex shader and a post-process fragment shader.
+              The background animation is entirely made with WebGl. It consists of a vertex shader and a post-process fragment shader.
               </p>
             <p>
               It is definitely far from being perfect and I guess the code could be cleaner (I'm no javascript expert) but I didn't want to spend too much time on it.
@@ -201,7 +201,7 @@
               <h6>Oct. 1st 2022 | Unity, C#</h6>
             </div>
             <p>I made this game with a friend during ludum dare 51 game jam.
-              It was made using Unity in under 24 hours as our participation was a las minute decision (compared to 72 hours usually).
+              It was made using Unity in under 24 hours as our participation was a last minute decision (compared to 72 hours usually).
               We ended up 501st out of 1703 participants.
             </p>
             <a href="https://ldjam.com/events/ludum-dare/51/seismic-panic"  title="Project Repo" target="_blank">Ludum dare</a>
@@ -232,14 +232,15 @@
               <h1>Rustracer</h1>
               <h6>Aug. 2022 | Rust</h6>
             </div>
-            <p>A basic raytracer implementation(on CPU) I've worked on in order to learn Rust following Raytracing in one weekend series. However, I decided to stop at this point because I wanted to make a GPU accelerated version of this project later.</p>
+            <p>A basic raytracer implementation(on CPU) I've worked on in order to learn Rust following Raytracing in one weekend series.</p>
 
-            <p>This raytracer can handle spheres, depth of field and three types of material:<p>
+            <p>This raytracer can handle spheres, depth of field and three types of material:
             <ul>
             <li>Lambertian</li>
             <li>Dielectric</li>
             <li>Metalic</li>
             </ul>
+            However, I decided to stop at this point because I wanted to make a GPU accelerated version of this project later.<p>
 
             <p>While computing the output image, the current state is displayed in a window managed on a different thread.</p>
 
