--- a/projects.html
+++ b/projects.html
@@ -63,13 +63,13 @@
             </button>
             <div class="slides-container">
 
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-05-56.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-00.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-08.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-13.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-17.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-21.png" alt="simulation images"/></div>
-              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-26.png" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-05-56.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-00.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-08.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-13.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-17.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-21.jpg" alt="simulation images"/></div>
+              <div class="slide"><img src="misc/cppphysicssim/Screenshot from 2023-05-20 15-06-26.jpg" alt="simulation images"/></div>
 
             </div>
           </section>
@@ -104,16 +104,16 @@
               &#8250;
             </button>
             <div class="slides-container">
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-39.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-31.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-07-49.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-17 10-53-39.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-17.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-06-16.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-07-39.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-14-14.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-20.png" alt="simulation images"/></div>
-              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-02-06 19-58-20.png" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-39.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-31.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-07-49.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-17 10-53-39.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-17.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-06-16.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-07-39.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-14-14.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-05-16 18-05-20.jpg" alt="simulation images"/></div>
+              <div class="slide"><img class="slide" Src="misc/blackseas/Screenshot from 2023-02-06 19-58-20.jpg" alt="simulation images"/></div>
             </div>
           </section>
         </div>
@@ -162,12 +162,12 @@
               &#8250;
             </button>
             <div class="slides-container">
-              <div class="slide"><img class="slide" src="misc/kinect/f.png" alt="final result closer look (not knitted)"/></div>
-              <div class="slide"><img class="slide" src="misc/kinect/a.png" alt="selected mesh"/></div>
-              <div class="slide"><img class="slide" src="misc/kinect/b.png" alt="control polyhedron"/></div>
-              <div class="slide"><img class="slide" src="misc/kinect/c.png" alt="border constraints"/></div>
-              <div class="slide"><img class="slide" src="misc/kinect/d.png" alt="control points with an offset"/></div>
-              <div class="slide"><img class="slide" src="misc/kinect/e.png" alt="final result (not knitted)"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/f.jpg" alt="final result closer look (not knitted)"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/a.jpg" alt="selected mesh"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/b.jpg" alt="control polyhedron"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/c.jpg" alt="border constraints"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/d.jpg" alt="control points with an offset"/></div>
+              <div class="slide"><img class="slide" src="misc/kinect/e.jpg" alt="final result (not knitted)"/></div>
 
             </div>
           </section>
@@ -217,7 +217,7 @@
             </button>
             <div class="slides-container">
               <div class="slide"><img class="slide" src="misc/ludum_dare/game.gif" alt="gameplay gif"/></div>
-              <div class="slide"><img class="slide" src="misc/ludum_dare/ludum_dare.png" alt="image of the game"/></div>
+              <div class="slide"><img class="slide" src="misc/ludum_dare/ludum_dare.jpg" alt="image of the game"/></div>
               <div class="slide"><img class="slide" src="misc/ludum_dare/eng_game.gif" alt="gameplay gif"/></div>
             </div>
           </section>
@@ -249,7 +249,7 @@
             <a href="https://github.com/BricePrs/Rustracer"  title="Project Repo" target="_blank">Source Code</a>
           </div>
           <div class="media-list">
-            <img src="misc/raytracer/raytracing.png" alt="image rendered by this raytracer"/>
+            <img src="misc/raytracer/raytracing.jpg" alt="image rendered by this raytracer"/>
           </div>
         </div>
       </div>
@@ -276,9 +276,9 @@
               &#8250;
             </button>
             <div class="slides-container">
-              <div class="slide"><img class="slide" src="misc/inria_internship/espace_killy.png" alt="before filter"/></div>
-              <div class="slide"><img class="slide" src="misc/inria_internship/espace_killy_render.png" alt="after filter"/></div>
-              <div class="slide"><img class="slide" src="misc/inria_internship/joli_bug.png" alt="joli bug"/></div>
+              <div class="slide"><img class="slide" src="misc/inria_internship/espace_killy.jpg" alt="before filter"/></div>
+              <div class="slide"><img class="slide" src="misc/inria_internship/espace_killy_render.jpg" alt="after filter"/></div>
+              <div class="slide"><img class="slide" src="misc/inria_internship/joli_bug.jpg" alt="joli bug"/></div>
             </div>
           </section>
         </div>
@@ -308,9 +308,9 @@
               &#8250;
             </button>
             <div class="slides-container">
-            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-11-04%2016-41-43.png" alt="image rendered by this raytracer"/></div>
-            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-06-08%2017-01-32.png" alt="image rendered by this raytracer"/></div>
-            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-06-08%2017-04-33.png" alt="image rendered by this raytracer"/></div>
+            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-11-04%2016-41-43.jpg" alt="image rendered by this raytracer"/></div>
+            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-06-08%2017-01-32.jpg" alt="image rendered by this raytracer"/></div>
+            <div class="slide"><img class="slide" Src="misc/raymarching/Screenshot%20from%202022-06-08%2017-04-33.jpg" alt="image rendered by this raytracer"/></div>
             </div>
           </section>
 
@@ -351,7 +351,7 @@
             <div class="slide"><img class="slide" src="misc/python/particlefield.gif" alt="image of a python project"/></div>
             <div class="slide"><img class="slide" src="misc/python/spheres.gif" alt="image of a python project"/></div>
             <div class="slide"><img class="slide" src="misc/python/tsunami.gif" alt="image of a python project"/></div>
-            <div class="slide"><img class="slide" src="misc/python/tokamak.png" alt="image of a python project"/></div>
+            <div class="slide"><img class="slide" src="misc/python/tokamak.jpg" alt="image of a python project"/></div>
             </div>
           </section>
         </div>
