--- a/about.html
+++ b/about.html
@@ -48,19 +48,19 @@
       <div class="about-me">
         <h1> About Me </h1>
         <hr>
+
         <p>
-          WORK IN PROGRESS
-        </p>
+I’m a French student studying math and informatics. I have always liked math, physics and informatics and I am especially passionate about computer graphics.        </p>
         <p>
-          I’m a French student studying math and informatics at Grenoble. I have always liked math, physics and informatics and I am especially passionate about computer graphics.
-        </p>
-        <p>
-        When I discovered programmation, I was amazed by the things it allowed me to do. It allow to build so many things by writing text. A few years later, I discovered shaders.
-          I remember playing hours with my calculator in highschool, graphing weird functions and making programs for fun. So, when I stumbled upon shaders (on shadertoy), I really enjoyed it because, in many ways, it the continuity of when I was playing with function but with cooler results and more possibilities.
+        Back in highschool, I was playing to graph some weird functions and making programs for my calculator. So, I was amazed when I stumbled upon shadertoy and discovered the possibilities shaders (and math) offered.
         </p>
 
         <p>
-        Aside from that, I have been climbing a lot since I was 10 years old and I have participated in a few climbing contests.
+Ever since I have been exploring this vast domain and many of the techniques employed in it. I’ve had a lot of fun with many personal projects. I am also interested in physics simulation and the fascinating results it is able to yield.
+        </p>
+
+        <p>
+Aside from that, I started climbing when I was 10 years old (in Marseille’s calanques). I have continued since and have even participated in a few climbing contests.
         </p>
 
 
