Small corrections + TITech

--- a/projects.html
+++ b/projects.html
@@ -83,8 +83,8 @@
               <h1>BlackSeas Game</h1>
               <h6>Feb. 2023 - April. 2023 | Rust / OpenGl (School Project)</h6>
             </div>
-            <p>This project is a school project were we decided the subject. I decided with 4 friends to make a game using a game engine I was making with one other member of this group.</p>
-            <p>The goal was to do everything from scratch, using only opengl and some other utility libraries. The objective was to make a multiplayer game were player could control a boat and navigate on an ocean.</p>
+            <p>This project is a school project where we decided the subject. I decided with 4 friends to make a game using a game engine I was making with one other member of this group.</p>
+            <p>The goal was to do everything from scratch, using only opengl and some other utility libraries. The objective was to make a multiplayer game where player could control a boat and navigate on an ocean.</p>
             <p>Each member had a dedicated part for this project. Paul Colinot was in charge of the physics and collisions. Hélène Hassan worked on the ocean, following Tessendorf paper. Virgile Henry was working with me on the game engine architecture. He also made the 3D models and added the network part required for the multiplayer. I worked on the terrain generation, the lighting, postprocessing effects (raymarched clouds, gamma correction, tone mapping, bloom), materials and the dynamic skybox.
             <p>Many things could have been done better during this project, however we only had a limited amount of time to spend on this. Finally, I want to explain that we tried to keep the game engine independent of the game, and it has also slowed us down, because it was not always easy to access some of the components we needed.</p>
             <p>More details are available on the project report (in french) that we submitted, even though, due to some submissions constraints, some part of our work have been eluded.</p>
