--- a/about.html
+++ b/about.html
@@ -29,6 +29,13 @@
         <img src="misc/portraitBP.jpg" alt="A portrait of me"/>
         <h1> Education </h1>
         <hr>
+        <div class="school">
+        <div class="header-container">
+          <h1>Tokyo Institute of technology</h1>
+          <h6>Apr. 2024 - Aug. 2024</h6>
+        </div>
+        Spent 5 month in tokyo during an exchange program.
+      </div>
       <div class="school">
         <div class="header-container">
           <h1>École nationale supérieure d'informatique et de mathématiques appliquées (ENSIMAG)</h1>
